<resources>
    <string name="app_name">Download Manager Exploration</string>
    <string name="hint_url">Url to file to download</string>
    <string name="show_notification">Show download notification</string>
    <string name="start_download">Download!</string>
    <string name="require_charge">Require Charge</string>
    <string name="require_idle">Require Idle</string>
    <string name="title_notification">Notification Title</string>
    <string name="default_notification_title">Download Test</string>
    <string name="default_notification_description">Downloading a file for testing Download Manager API</string>
    <string name="allow_roaming">Allow download while roaming</string>
    <string name="allow_wifi">Allow download over Wifi</string>
    <string name="allow_mobile">Allow download over mobile network</string>
    <string name="delete">Delete File</string>
    <string name="open_file">Open File</string>
    <string name="err_no_activity_found">Can\'t open file. Unknown format file.</string>
    <string name="delete_all">Delete all files</string>
    <string name="confirm_delete_all">%d files will be removed. Continue?</string>
    <string name="cancel">Cancel</string>
    <string name="info">Info</string>
    <string name="created_by">Created by</string>

    <string name="ok" translatable="false">OK</string>
    <string name="author" translatable="false">Daniele Bachicchi</string>
    <string name="link_facebook" translatable="false">https://www.facebook.com/danielebachicchipage</string>
    <string name="link_twitter" translatable="false">https://twitter.com/dbachicchi</string>
    <string name="link_linkedin" translatable="false">https://it.linkedin.com/in/daniele-bachicchi-81257023</string>
    <string name="link_github" translatable="false">https://github.com/Badge87</string>
    <string name="link_website" translatable="false">https://www.danielebachicchi.com/</string>
    <string name="thanks">Thank you for your download!</string>
    <string name="description_notification">Notification Description</string>
</resources>
