<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        tools:context=".view.MainActivity">
    <ScrollView android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:text=""
                android:ems="10"
                android:id="@+id/txt_url" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_url"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_general_option"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_url"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/allow_mobile"/>
            <androidx.appcompat.widget.SwitchCompat

                    android:layout_width="match_parent"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_allow_mobile"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/allow_roaming"/>

            <androidx.appcompat.widget.SwitchCompat

                    android:layout_width="match_parent"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_allow_roaming"/>
            </LinearLayout>


        </LinearLayout>


            <TextView
                    android:text="@string/show_notification"
                    android:layout_width="0dp"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_notification_visible"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:fontFamily="@font/manaspace"
                    app:layout_constraintTop_toTopOf="@+id/switch_notification_visible"
                    app:layout_constraintBottom_toBottomOf="@+id/switch_notification_visible"
                    app:layout_constraintEnd_toStartOf="@+id/switch_notification_visible"/>
            <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="0dp"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_notification_visible" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_general_option" android:layout_marginTop="8dp"
                    android:fontFamily="@font/manaspace"/>

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/switch_notification_visible"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_notification_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_notification">
                <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                         android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_notification_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_notification">
                <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                         android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
            <Button
                    android:text="@string/start_download"
                    android:background="@color/colorPrimary"
                    android:textColor="#ffffff"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_download" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintTop_toBottomOf="@+id/layout_n_feature"
                    android:layout_marginTop="50dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/layout_n_feature"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_notification"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/require_charge"/>
            <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:checked="false"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_require_charge"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/require_idle"/>
                <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:checked="false"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch_require_idle"/>
            </LinearLayout>



        </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>