<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/txt_app_name" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_version"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/txt_app_name" app:layout_constraintEnd_toEndOf="@+id/txt_app_name"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/txt_app_name"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/created_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/lbl_created_by" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_version"
            android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/author"
            android:textSize="40sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_author" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toBottomOf="@+id/lbl_created_by"
            android:layout_marginTop="8dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_link_website"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp">
        <ImageButton android:layout_width="0dp"
                     android:layout_weight="0.25"
                     android:layout_height="match_parent"
                     style="@style/PixelArtImage"
                     android:layout_margin="8dp"
                     android:background="@drawable/ico_facebook_pp"
                     android:id="@+id/btn_facebook"/>
        <ImageButton android:layout_width="0dp"
                     android:layout_weight="0.25"
                     android:layout_height="64dp"
                     android:layout_margin="8dp"
                     style="@style/PixelArtImage"
                     android:id="@+id/btn_twitter"
                     android:background="@drawable/ico_twitter_pp"/>
        <ImageButton android:layout_width="0dp"
                     android:layout_weight="0.25"
                     android:layout_height="64dp"
                     android:layout_margin="8dp"
                     style="@style/PixelArtImage"
                     android:id="@+id/btn_github"
                     android:background="@drawable/ico_github_pp"/>
        <ImageButton android:layout_width="0dp"
                     android:layout_weight="0.25"
                     android:layout_height="64dp"
                     android:layout_margin="8dp"
                     style="@style/PixelArtImage"
                     android:id="@+id/btn_linkedin"
                     android:background="@drawable/ico_linkedin_pp"/>
    </LinearLayout>
    <TextView
            android:text="@string/link_website"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_link_website" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_author" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/thanks"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_thanks"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>